2014-04-23  Vanessa Gil <vanessa.gil@artica.es>
	
	* godmode/agentes/agent_wizard.snmp_explorer.php: Changed
	'network_snmp_data' for 'network_snmp_data_inc' for module
	types: Bytes read and Bytes written.

2014-04-23  Alejandro Gallardo <alejandro.gallardo@artica.es>
	
	* godmode/setup/setup_netflow.php: Added a prompt dialog
	to warning about the time increase caused by the address
	resolution.

	* include/functions_graph.php: Added the functions
	"graph_netflow_circular_mesh" and "graph_netflow_host_traffic".

	* include/functions_netflow.php: Added the function
	"netflow_get_record". Added IP address resolution. Added
	two new netflow live view items: "host detailed traffic" and
	"circular mesh". Error fixes on several functions.

	* include/graphs/functions_d3.php: Added the function
	"d3_tree_map_graph".
	Improved the function "d3_relationship_graph".

	* include/graphs/pandora.d3.js: Added the function "treeMap".
	Improved the function "chordDiagram".

2014-04-23  Vanessa Gil <vanessa.gil@artica.es>
	
	* include/functions_ui.php
	  include/ajax/module.php
	  operation/tree.php
	  operation/agentes/estado_monitores.php
	  operation/agentes/status_monitor.php: Changed
	data view of modules to popup.

	* include/styles/menu.css: Changed style of menu.

2014-04-22  Sergio Martin <sergio.martin@artica.es>

	* pandoradb.postgreSQL.sql
	pandoradb.oracle.sql
	pandoradb.data.postgreSQL.sql
	pandoradb.data.oracle.sql
	extras/pandoradb_migrate_5.0.x_to_5.1.mysql.sql
	extras/pandoradb_migrate_5.0.x_to_5.1.oracle.sql
	extras/pandoradb_migrate_5.0.x_to_5.1.postgreSQL.sql
	godmode/agentes/module_manager_editor_plugin.php
	godmode/servers/plugin.php
	godmode/servers/manage_recontask.php
	godmode/servers/manage_recontask_form.php
	godmode/servers/recon_script.php
	pandoradb_data.sql
	include/javascript/pandora_modules.js
	pandoradb.sql: Changed the recon scripts parameters to
	dynamic fields like plugin macros. 
	Fixed some plugin macros bugs in the new hide parameter
